--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,11 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
+    "nodemon": "^2.0.15",
     "pg": "^8.2.1"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
   "scripts": {
-    "dev" : "nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shailesh",
